Remove ignored files from tracking

--- a/register.html
+++ b/register.html
@@ -18,6 +18,8 @@
         <form action="register_action.php" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br>
+            <label for ="email">Email:</label>
+            <input id="email" placeholder="Email" type="email" required class="validate" autocomplete="off">
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required><br>
             <button type="submit">Register</button>
