--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <form action="login_action.php" method="post">
+        <form action="/api/login" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br>
             <label for="password">Password:</label>
