--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <form action="register_action.php" method="post">
+        <form action="/api/register" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br>
             <label for ="email">Email:</label>
