added javascript files

--- a/add_expense.html
+++ b/add_expense.html
@@ -28,5 +28,6 @@
             <button type="submit">Add Expense</button>
         </form>
     </main>
+    <script src="add_expense.js"></script>
 </body>
 </html>
