--- a/edit_expense.html
+++ b/edit_expense.html
@@ -29,5 +29,6 @@
             <button type="submit">Save Changes</button>
         </form>
     </main>
+    <script src="edit_expense.js"></script>
 </body>
 </html>
