--- a/login.html
+++ b/login.html
@@ -23,5 +23,6 @@
             <button type="submit">Login</button>
         </form>
     </main>
+    <script src="login.js"></script>
 </body>
 </html>
