--- a/register.html
+++ b/register.html
@@ -25,5 +25,6 @@
             <button type="submit">Register</button>
         </form>
     </main>
+    <script src="register.js"></script>
 </body>
 </html>
